# cmake-slides

./: Makefile  README.md  cmake-talk.tex
code/: CMakeLists.txt
code/cmake/: generateLinuxDesktopEntry.sh  generateLinuxDirectory.sh
code/src/01-helloworld/: helloworld.cpp
code/src/02-staticlib/: MyStaticLibrary.cpp
code/src/04-boostusage/: CMakeLists.txt
code/src/05-cpackdeb/: CMakeLists.txt
code/src/06-staticlibrarylinking/: testStaticLinking.cpp
code/src/07-qt+opengl/: CMakeLists.txt
tutorials/: CMakeLists.txt  README.md  README.txt
tutorials/01-helloworld/: CMakeLists.txt
tutorials/02-staticlib/: CMakeLists.txt  MyStaticLibrary.h
tutorials/03-sharedlib/: CMakeLists.txt  MyDynamicLibrary.cpp
tutorials/04-boostusage/: CMakeLists.txt
tutorials/05-cpackdeb/: CMakeLists.txt  myProgram.cpp  myProgram.desktop  myProgram.directory  myProgram.menu
tutorials/cmake/: generateLinuxMenuEntry.sh
tutorials/src/03-sharedlib/: MyDynamicLibrary.h
tutorials/src/05-cpackdeb/: CMakeLists.txt
tutorials/src/06-staticlibrarylinking/: CMakeLists.txt
tutorials/src/07-qt+opengl/: CMakeLists.txt
